--- a/cmd/webserver/templates/app.gohtml
+++ b/cmd/webserver/templates/app.gohtml
@@ -39,7 +39,7 @@
         <div class="card">
             <div class="card-header text-white">
 
-                <ul class="nav nav-tabs card-header-tabs" role="tablist">
+                <ul class="nav nav-tabs card-header-tabs nav-fill-mobile" role="tablist">
                     <li class="nav-item">
                         <a class="nav-link nav-link-small active" data-toggle="tab" href="#details" role="tab">Details</a>
                     </li>
