--- a/cmd/webserver/templates/sales.gohtml
+++ b/cmd/webserver/templates/sales.gohtml
@@ -45,6 +45,7 @@
         {{ end }}
 
         <div class="card">
+            {{ template "_apps_header" . }}
             <div class="card-body">
 
                 <div class="row">
