--- a/cmd/webserver/templates/changes.gohtml
+++ b/cmd/webserver/templates/changes.gohtml
@@ -4,7 +4,7 @@
     <div class="container" id="changes-page">
 
         <div class="jumbotron">
-            <h1><i class="fas fa-exchange-alt"></i> Changes</h1>
+            <h1><i class="fas fa-exchange-alt"></i> Library Changes</h1>
             <p class="lead">{{ .Description }}</p>
         </div>
 
@@ -16,6 +16,12 @@
                 <h5 class="float-right mb-0">
                     <span class="badge badge-secondary" id="live-badge">Live</span>
                 </h5>
+
+                <ul class="nav nav-tabs card-header-tabs" role="tablist">
+                    <li class="nav-item">
+                        <span class="nav-link active" role="tab">Library Changes</span>
+                    </li>
+                </ul>
 
             </div>
             <div class="card-body">
