--- a/cmd/webserver/templates/wishlists.gohtml
+++ b/cmd/webserver/templates/wishlists.gohtml
@@ -47,7 +47,7 @@
 
             {{/*                </ul>*/}}
             {{/*            </div>*/}}
-
+            {{ template "_apps_header" . }}
             <div class="card-body">
 
                 <div class="tab-content">
