--- a/cmd/webserver/templates/apps.gohtml
+++ b/cmd/webserver/templates/apps.gohtml
@@ -142,7 +142,7 @@
                 </div>
 
                 <div class="table-responsive">
-                    <table class="table table-hover table-striped mb-0" data-path="/apps/apps.json">
+                    <table class="table table-hover table-striped table-counts mb-0" data-path="/apps/apps.json">
                         <thead class="thead-light">
                         <tr>
                             <th scope="col" class="thin">#</th>
