--- a/cmd/webserver/templates/coop.gohtml
+++ b/cmd/webserver/templates/coop.gohtml
@@ -63,7 +63,7 @@
                 {{if gt (len .Players) 1 }}
 
                     <div class="table-responsive">
-                        <table class="table table-hover table-striped table-datatable mb-0" data-order='[[0, "asc"]]'>
+                        <table class="table table-hover table-striped table-datatable table-counts mb-0" data-order='[[0, "asc"]]'>
                             <thead class="thead-light">
                             <tr>
                                 <th scope="col">Game</th>
