--- a/cmd/webserver/templates/groups.gohtml
+++ b/cmd/webserver/templates/groups.gohtml
@@ -61,7 +61,7 @@
                 {{/*                </div>*/}}
 
                 <div class="table-responsive">
-                    <table class="table table-hover table-striped" data-path="/groups/groups.json">
+                    <table class="table table-hover table-striped table-counts" data-path="/groups/groups.json">
                         <thead class="thead-light">
                         <tr>
                             <th scope="col">Name</th>
