--- a/cmd/webserver/templates/news.gohtml
+++ b/cmd/webserver/templates/news.gohtml
@@ -64,7 +64,7 @@
                     <div class="tab-pane" id="apps" role="tabpanel">
 
                         <div class="table-responsive">
-                            <table class="table table-hover table-striped mb-0" id="news-table" data-ordering="false" data-path="/news/news.json">
+                            <table class="table table-hover table-striped table-counts mb-0" id="news-table" data-ordering="false" data-path="/news/news.json">
                                 <thead class="thead-light">
                                 <tr>
                                     <th scope="col">Game</th>
