--- a/cmd/webserver/templates/product_keys.gohtml
+++ b/cmd/webserver/templates/product_keys.gohtml
@@ -57,7 +57,7 @@
                 </form>
 
                 <div class="table-responsive">
-                    <table class="table table-hover table-striped mb-0" data-path="/product-keys/product-keys.json">
+                    <table class="table table-hover table-striped table-counts mb-0" data-path="/product-keys/product-keys.json">
                         <thead class="thead-light">
                         <tr>
                             <th scope="col" nowrap="nowrap">Game</th>
