--- a/cmd/webserver/templates/sales.gohtml
+++ b/cmd/webserver/templates/sales.gohtml
@@ -145,7 +145,7 @@
                 </div>
 
                 <div class="table-responsive">
-                    <table class="table table-hover table-striped mb-0" data-path="/sales/sales.json">
+                    <table class="table table-hover table-striped table-counts mb-0" data-path="/sales/sales.json">
                         <thead class="thead-light">
                         <tr>
                             <th scope="col">Sale</th>
