--- a/cmd/webserver/templates/wishlists.gohtml
+++ b/cmd/webserver/templates/wishlists.gohtml
@@ -56,7 +56,7 @@
                     <div class="tab-pane show active" id="apps" role="tabpanel">
 
                         <div class="table-responsive">
-                            <table class="table table-hover table-striped" data-path="/wishlists/apps.json">
+                            <table class="table table-hover table-striped table-counts" data-path="/wishlists/apps.json">
                                 <thead class="thead-light">
                                 <tr>
                                     <th scope="col">App</th>
