--- a/cmd/webserver/templates/bundles.gohtml
+++ b/cmd/webserver/templates/bundles.gohtml
@@ -16,7 +16,7 @@
 
                 {{/* Bundles List */}}
                 <div class="table-responsive">
-                    <table class="table table-hover table-striped" data-path="/bundles/bundles.json">
+                    <table class="table table-hover table-striped table-counts" data-path="/bundles/bundles.json">
                         <thead class="thead-light">
                         <tr>
                             <th scope="col">Name</th>
