--- a/cmd/webserver/templates/commits.gohtml
+++ b/cmd/webserver/templates/commits.gohtml
@@ -14,7 +14,7 @@
             <div class="card-body">
 
                 <div class="table-responsive">
-                    <table class="table table-hover table-striped mb-0" data-path="/commits/commits.json">
+                    <table class="table table-hover table-striped table-counts mb-0" data-path="/commits/commits.json">
                         <thead class="thead-light">
                         <tr>
                             <th scope="col">Message</th>
