--- a/cmd/webserver/templates/players.gohtml
+++ b/cmd/webserver/templates/players.gohtml
@@ -72,7 +72,7 @@
                 </div>
 
                 <div class="table-responsive">
-                    <table class="table table-hover table-striped mb-0" data-path="/players/players.json">
+                    <table class="table table-hover table-striped table-counts mb-0" data-path="/players/players.json">
                         <thead class="thead-light">
                         <tr>
                             <th scope="col" class="thin">Rank</th>
