--- a/cmd/webserver/templates/upcoming.gohtml
+++ b/cmd/webserver/templates/upcoming.gohtml
@@ -35,7 +35,7 @@
             <div class="card-body">
 
                 <div class="table-responsive">
-                    <table class="table table-hover table-striped mb-0" data-path="/upcoming/upcoming.json">
+                    <table class="table table-hover table-striped table-counts mb-0" data-path="/upcoming/upcoming.json">
                         <thead class="thead-light">
                         <tr>
                             <th scope="col">App</th>
