--- a/cmd/webserver/templates/stats.gohtml
+++ b/cmd/webserver/templates/stats.gohtml
@@ -49,7 +49,7 @@
                 </div>
 
                 <h5>App Types</h5>
-                <div class="table-responsive mb-4">
+                <div class="table-responsive">
                     <table class="table table-hover table-striped" data-order='[[1, "desc"]]' id="app-types">
                         <thead class="thead-light">
                         <tr>
