Add live badge to bundles

--- a/cmd/webserver/templates/bundles.gohtml
+++ b/cmd/webserver/templates/bundles.gohtml
@@ -12,6 +12,19 @@
         {{ template "_flashes" . }}
 
         <div class="card">
+            <div class="card-header">
+
+                <h5 class="float-right mb-0">
+                    <span class="badge badge-secondary" id="live-badge">Live</span>
+                </h5>
+
+                <ul class="nav nav-tabs card-header-tabs" role="tablist">
+                    <li class="nav-item">
+                        <span class="nav-link active" role="tab">Bundles</span>
+                    </li>
+                </ul>
+
+            </div>
             <div class="card-body">
 
                 {{/* Bundles List */}}
