Update descriptions and counts

--- a/cmd/webserver/templates/achievements.gohtml
+++ b/cmd/webserver/templates/achievements.gohtml
@@ -22,7 +22,7 @@
 
                 </div>
                 <div class="col-12">
-                    <p class="lead">The apps with the most achievements.</p>
+                    <p class="lead">{{ .Description }}</p>
                 </div>
 
             </div>
