--- a/cmd/webserver/templates/sales.gohtml
+++ b/cmd/webserver/templates/sales.gohtml
@@ -21,7 +21,7 @@
 
                 </div>
                 <div class="col-12">
-                    <p class="lead">{{ comma64 .Count }} games on sale.</p>
+                    <p class="lead">{{ .Description }}</p>
                 </div>
             </div>
 
