--- a/cmd/webserver/templates/badge.gohtml
+++ b/cmd/webserver/templates/badge.gohtml
@@ -32,7 +32,7 @@
                 {{ end }}
 
                 <div class="table-responsive">
-                    <table class="table table-hover table-striped mb-0" data-ordering="false" data-path="/badges/{{ .Badge.GetUniqueID }}/players.json?foil={{ .Foil }}">
+                    <table class="table table-hover table-striped table-counts mb-0" data-ordering="false" data-path="/badges/{{ .Badge.GetUniqueID }}/players.json?foil={{ .Foil }}">
                         <thead class="thead-light">
                         <tr>
                             <th scope="col" class="thin">Rank</th>
