--- a/cmd/webserver/templates/changes.gohtml
+++ b/cmd/webserver/templates/changes.gohtml
@@ -27,7 +27,7 @@
             <div class="card-body">
 
                 <div class="table-responsive">
-                    <table class="table table-hover table-striped mb-0" data-path="/changes/changes.json">
+                    <table class="table table-hover table-striped table-counts mb-0" data-path="/changes/changes.json">
                         <thead class="thead-light">
                         <tr>
                             <th scope="col">Change</th>
