--- a/cmd/webserver/templates/new_releases.gohtml
+++ b/cmd/webserver/templates/new_releases.gohtml
@@ -21,7 +21,7 @@
 
                 </div>
                 <div class="col-12">
-                    <p class="lead">The {{ comma64 .Apps }} apps released in the last {{ comma .Days }} days.</p>
+                    <p class="lead">{{ .Description }}</p>
                 </div>
 
             </div>
@@ -34,7 +34,7 @@
             <div class="card-body">
 
                 <div class="table-responsive">
-                    <table class="table table-hover table-striped mb-0" data-path="/new-releases/new-releases.json">
+                    <table class="table table-hover table-striped table-counts mb-0" data-path="/new-releases/new-releases.json">
                         <thead class="thead-light">
                         <tr>
                             <th scope="col">App</th>
