--- a/cmd/webserver/templates/player.gohtml
+++ b/cmd/webserver/templates/player.gohtml
@@ -237,7 +237,7 @@
                             {{ end }}
 
                             <div class="table-responsive">
-                                <table class="table table-hover table-striped mb-0" data-path="/players/{{ .Player.ID }}/friends.json">
+                                <table class="table table-hover table-striped table-counts mb-0" data-path="/players/{{ .Player.ID }}/friends.json">
                                     <thead class="thead-light">
                                     <tr>
                                         <th scope="col">Player</th>
@@ -351,7 +351,7 @@
 
                         {{/* App Badges Table */}}
                         <div class="table-responsive">
-                            <table class="table table-hover table-striped mb-0" id="badges-table" data-ordering="false" data-path="/players/{{ .Player.ID }}/badges.json">
+                            <table class="table table-hover table-striped table-counts mb-0" id="badges-table" data-ordering="false" data-path="/players/{{ .Player.ID }}/badges.json">
                                 <thead class="thead-light">
                                 <tr>
                                     <th scope="col">App</th>
@@ -370,7 +370,7 @@
 
                         {{/* Groups */}}
                         <div class="table-responsive">
-                            <table class="table table-hover table-striped mb-0" data-path="/players/{{ .Player.ID }}/groups.json" id="groups-table">
+                            <table class="table table-hover table-striped table-counts mb-0" data-path="/players/{{ .Player.ID }}/groups.json" id="groups-table">
                                 <thead class="thead-light">
                                 <tr>
                                     <th scope="col">Group</th>
@@ -508,7 +508,7 @@
 
                             {{/* Games List */}}
                             <div class="table-responsive">
-                                <table class="table table-hover table-striped mb-0" data-path="/players/{{ .Player.ID }}/games.json" id="all-games">
+                                <table class="table table-hover table-striped table-counts mb-0" data-path="/players/{{ .Player.ID }}/games.json" id="all-games">
                                     <thead class="thead-light">
                                     <tr>
                                         <th scope="col">All Games</th>
@@ -542,7 +542,7 @@
                     <div class="tab-pane" id="wishlist" role="tabpanel">
 
                         <div class="table-responsive">
-                            <table class="table table-hover table-striped mb-0" data-path="/players/{{ .Player.ID }}/wishlist.json" data-order='[[0, "asc"]]' id="wishlist-table">
+                            <table class="table table-hover table-striped table-counts mb-0" data-path="/players/{{ .Player.ID }}/wishlist.json" data-order='[[0, "asc"]]' id="wishlist-table">
                                 <thead class="thead-light">
                                 <tr>
                                     <th scope="col" class="thin">#</th>
