--- a/cmd/webserver/templates/upcoming.gohtml
+++ b/cmd/webserver/templates/upcoming.gohtml
@@ -22,7 +22,7 @@
 
                 </div>
                 <div class="col-12">
-                    <p class="lead">The {{ comma64 .Apps }} apps with a release date in the future.</p>
+                    <p class="lead">{{ .Description }}</p>
                 </div>
 
             </div>
