--- a/cmd/webserver/templates/wishlists.gohtml
+++ b/cmd/webserver/templates/wishlists.gohtml
@@ -22,7 +22,7 @@
 
                 </div>
                 <div class="col-12">
-                    <p class="lead">The most wishlisted items on Game DB</p>
+                    <p class="lead">{{ .Description }}</p>
                     <small>To see a limited but more accurate list, see the <a href="https://store.steampowered.com/search/?filter=popularwishlist" target="_blank">Steam store list</a>.</small>
                 </div>
 
