--- a/cmd/webserver/assets/sass/_group.scss
+++ b/cmd/webserver/assets/sass/_group.scss
@@ -10,5 +10,13 @@
 
     #group-chart {
         height: 300px;
+        pointer-events: none;
+    }
+
+    @include media-breakpoint-up(md) {
+        #group-chart {
+            height: 300px;
+            pointer-events: auto;
+        }
     }
 }
