--- a/cmd/webserver/templates/player.gohtml
+++ b/cmd/webserver/templates/player.gohtml
@@ -182,7 +182,7 @@
                             </div>
                             <div class="col-sm-12 col-lg-6">
 
-                                <div class="card mb-0 mb-lg-4">
+                                <div class="card mb-0">
                                     <div class="card-header">Ranks <small>(Updated daily)</small></div>
                                     <div class="card-body">
 
