--- a/cmd/webserver/templates/player.gohtml
+++ b/cmd/webserver/templates/player.gohtml
@@ -97,10 +97,10 @@
                                                     <th scope="col" nowrap="nowrap">On Steam</th>
                                                     <td><span data-toggle="tooltip" data-placement="top" title="{{ .Player.GetSteamTimeNice }}" data-livestamp="{{ .Player.GetSteamTimeUnix }}">{{ .Player.GetSteamTimeNice }}</span></td>
                                                 </tr>
-                                                <tr>
-                                                    <th scope="col" nowrap="nowrap">Signed Off</th>
-                                                    <td><span data-toggle="tooltip" data-placement="top" title="{{ .Player.GetLogoffNice }}" data-livestamp="{{ .Player.GetLogoffUnix }}">{{ .Player.GetLogoffNice }}</span></td>
-                                                </tr>
+                                                {{/*<tr>*/}}
+                                                {{/*    <th scope="col" nowrap="nowrap">Signed Off</th>*/}}
+                                                {{/*    <td><span data-toggle="tooltip" data-placement="top" title="{{ .Player.GetLogoffNice }}" data-livestamp="{{ .Player.GetLogoffUnix }}">{{ .Player.GetLogoffNice }}</span></td>*/}}
+                                                {{/*</tr>*/}}
                                                 <tr>
                                                     <th scope="col" nowrap="nowrap">Last Updated</th>
                                                     <td><span data-toggle="tooltip" data-placement="top" title="{{ .Player.GetUpdatedNice }}" data-livestamp="{{ .Player.GetUpdatedUnix }}">{{ .Player.GetUpdatedNice }}</span></td>
