Show full country name

--- a/cmd/webserver/templates/player.gohtml
+++ b/cmd/webserver/templates/player.gohtml
@@ -110,8 +110,8 @@
                                                         <th scope="col" nowrap="nowrap">Country</th>
                                                         <td class="img">
                                                             <div class="icon-name">
-                                                                <div class="icon"><img data-toggle="tooltip" data-placement="top" class="wide" alt="{{ .Player.GetCountry }}" title="{{ .Player.GetCountry }}" src="{{.Player.GetFlag}}"></div>
-                                                                <div class="name min">{{ .Player.CountryCode }}</div>
+                                                                <div class="icon"><img class="wide" alt="{{ .Player.GetCountry }}" src="{{.Player.GetFlag}}"></div>
+                                                                <div class="name min">{{ .Player.GetCountry }}</div>
                                                             </div>
                                                         </td>
                                                     </tr>
