--- a/cmd/webserver/templates/player.gohtml
+++ b/cmd/webserver/templates/player.gohtml
@@ -129,8 +129,13 @@
                                 </div>
 
                                 <div class="card mb-4">
-                                    <div class="card-header">Bans</div>
-                                    <div class="card-body">
+                                    <div class="card-header" data-toggle="collapse" data-target="#bans-collapse">
+                                        Bans
+                                        {{ if not .Player.Bans.History }}
+                                            : None <i class="fas fa-check text-success"></i>
+                                        {{ end }}
+                                    </div>
+                                    <div class="card-body collapse {{ if .Player.Bans.History }}show{{ end }}" id="bans-collapse">
 
                                         <div class="table-responsive">
                                             <table class="table mb-0">
