--- a/cmd/webserver/templates/commits.gohtml
+++ b/cmd/webserver/templates/commits.gohtml
@@ -5,7 +5,7 @@
 
         <div class="jumbotron">
             <h1><i class="fab fa-github"></i> Commits</h1>
-            <p class="lead">{{ comma .Total }} commits so far</p>
+            <p class="lead">Game DB is fully open sourced on GitHub</p>
         </div>
 
         {{ template "_flashes" . }}
