Fix bans cursor

--- a/cmd/webserver/templates/player.gohtml
+++ b/cmd/webserver/templates/player.gohtml
@@ -129,7 +129,7 @@
                                 </div>
 
                                 <div class="card mb-4">
-                                    <div class="card-header" data-toggle="collapse" data-target="#bans-collapse">
+                                    <div class="card-header cursor-pointer" data-toggle="collapse" data-target="#bans-collapse">
                                         Bans
                                         {{ if not .Player.Bans.History }}
                                             : None <i class="fas fa-check text-success"></i>
