--- a/cmd/webserver/templates/_header.gohtml
+++ b/cmd/webserver/templates/_header.gohtml
@@ -199,7 +199,7 @@
 
                             <div class="dropdown-divider"></div>
 
-                            <a class="dropdown-item" href="/chat-bot">Discord Bot</a>
+                            <a class="dropdown-item" href="/discord-bot">Discord Bot</a>
                             <a class="dropdown-item" href="/queues">Queues</a>
                             <a class="dropdown-item" href="/api">API (Game DB)</a>
                             <a class="dropdown-item" href="/steam-api">API (Steam)</a>
