--- a/cmd/webserver/templates/players_add.gohtml
+++ b/cmd/webserver/templates/players_add.gohtml
@@ -25,8 +25,8 @@
                                 <input type="search" class="form-control" id="search" name="search" value="{{ .Default }}" autofocus required>
                             </div>
 
-                            <label for="message">Captcha</label>
-                            <div class="g-recaptcha mb-3" data-sitekey="{{ .RecaptchaPublic }}" data-callback="recaptchaCallback"></div>
+                            {{/*                            <label for="message">Captcha</label>*/}}
+                            {{/*                            <div class="g-recaptcha mb-3" data-sitekey="{{ .RecaptchaPublic }}" data-callback="recaptchaCallback"></div>*/}}
 
                             <button type="submit" class="btn btn-success">Send</button>
 
