Update add player form

--- a/cmd/webserver/templates/players_add.gohtml
+++ b/cmd/webserver/templates/players_add.gohtml
@@ -21,14 +21,14 @@
                         <div class="col-sm-6">
 
                             <div class="form-group">
-                                <label for="search">Search</label>
+                                <label for="search">Player</label>
                                 <input type="search" class="form-control" id="search" name="search" value="{{ .Default }}" autofocus required>
                             </div>
 
                             {{/*                            <label for="message">Captcha</label>*/}}
                             {{/*                            <div class="g-recaptcha mb-3" data-sitekey="{{ .RecaptchaPublic }}" data-callback="recaptchaCallback"></div>*/}}
 
-                            <button type="submit" class="btn btn-success">Send</button>
+                            <button type="submit" class="btn btn-success">Search</button>
 
                         </div>
                         <div class="col-sm-6">
