--- a/cmd/webserver/templates/badges.gohtml
+++ b/cmd/webserver/templates/badges.gohtml
@@ -35,7 +35,7 @@
                                 <tr>
                                     <th scope="row">Badge (in date order)</th>
                                     <th scope="row">Players</th>
-                                    <th scope="row">First Players</th>
+                                    <th scope="row" data-disabled>First Players</th>
                                 </tr>
                                 </thead>
                                 <tbody>
