--- a/cmd/webserver/templates/app.gohtml
+++ b/cmd/webserver/templates/app.gohtml
@@ -144,7 +144,7 @@
                                         </tr>
                                         <tr>
                                             <th scope="row" nowrap="nowrap" class="thin" style="width: 130px;">Players</th>
-                                            <td>{{ comma64 .App.GetPlayersInGame }} <small>now</small>, {{ comma .App.PlayerPeakWeek }} <small>weak peak</small></td>
+                                            <td>{{ comma64 .App.GetPlayersInGame }} <small>now</small>, {{ comma .App.PlayerPeakWeek }} <small>week peak</small></td>
                                         </tr>
 
                                         <tr>
