--- a/cmd/webserver/templates/home.gohtml
+++ b/cmd/webserver/templates/home.gohtml
@@ -153,7 +153,7 @@
                     <div class="card-body">
                         <form action="/players/add" method="post">
                             <div class="form-group">
-                                <input type="search" class="form-control" id="search" name="search" placeholder="Steam URL / ID" autofocus required>
+                                <input type="search" class="form-control" id="search" name="search" placeholder="Steam URL / ID" required>
                             </div>
 
                             <button type="submit" class="btn btn-success">Search</button>
