--- a/cmd/webserver/templates/queues.gohtml
+++ b/cmd/webserver/templates/queues.gohtml
@@ -65,7 +65,7 @@
                     </div>
                     <div class="col-12 col-xl-6">
                         <div data-queue="Steam" class="mb-2">
-                            <h5>Steam</h5>
+                            <h5>Steam PICS</h5>
                             <div id="steam"><i class="fas fa-spinner fa-spin fa-fw"></i></div>
                         </div>
                     </div>
