--- a/cmd/webserver/templates/queues.gohtml
+++ b/cmd/webserver/templates/queues.gohtml
@@ -7,6 +7,7 @@
 
             <h1><i class="fas fa-clock"></i> Queues</h1>
             <p class="lead">{{ .Description }}</p>
+            <small>An empty queue does not mean nothing is being processed</small>
 
         </div>
 
