--- a/cmd/webserver/templates/api.gohtml
+++ b/cmd/webserver/templates/api.gohtml
@@ -7,7 +7,7 @@
 
             <h1><i class="fas fa-database"></i> API <small>(BETA)</small></h1>
             <p class="lead">{{ .Description }}</p>
-            <small>For an API key, please <a href="/signup">signup</a>.</small>
+            <small>For an API key, please <a href="/signup">signup</a> and <a href="/donate">upgrade</a>.</small>
             <small>For the Steam API, see <a href="/steam-api">here</a>.</small>
 
         </div>
